--- a/src/assets/styles/MainSidebar.css
+++ b/src/assets/styles/MainSidebar.css
@@ -3,8 +3,14 @@
   height: 834px;
 }
 
-h2, h4 {
+h2,
+h4 {
   font-size: 14px;
   font-weight: 600;
   line-height: 16.66px;
+}
+
+.custom-button {
+  width: 50px;
+  height: 20px;
 }
